--- a/src/pages/About/componentesAbout/RoletaScroll/roletaScroll.css
+++ b/src/pages/About/componentesAbout/RoletaScroll/roletaScroll.css
@@ -74,6 +74,7 @@
     align-items: center;
     display: flex;
     margin-top: 10px;
+    will-change: transform;
  
 
 }
@@ -85,6 +86,7 @@
     line-height: 100%;
     font-style: normal;
     color: var(--color-gray-600);
+    will-change: transform;
 
 }
 
@@ -107,6 +109,7 @@
     line-height: 100%;
     color: var(--color-gray-600);
     margin-left: 60px;
+    will-change: transform;
 
 }
 
