arrumando estilo do menu navbar

--- a/src/pages/Contato/contato.css
+++ b/src/pages/Contato/contato.css
@@ -127,4 +127,9 @@ input[type="number"] {
 .captcha{
     margin-top: 0.625rem;
 }
-
+.pt-br-contato{
+    color: var(--color-gray-100);
+}
+.nav-menu-contato{
+    color: var(--color-gray-100);
+}
