--- a/src/pages/Contato/contato.css
+++ b/src/pages/Contato/contato.css
@@ -22,6 +22,7 @@
 .contato-form{
     width: 100%;
     max-width: 50%;
+    overflow: auto;
 }
 .contatos{
     width: 100%;
@@ -133,3 +134,48 @@ input[type="number"] {
 .nav-menu-contato{
     color: var(--color-gray-100);
 }
+
+
+/* responsivo medias */
+
+@media(max-width: 1440px) {
+    .formulario-contato button{
+        margin-bottom: 3.125rem;
+    }
+}
+@media(max-width: 1280px) {}
+
+@media(max-width: 1200px) {}
+
+@media(max-width: 991px) {
+    .formulario-contato form input{
+        padding: 1.5rem 0.75rem;
+    }
+}
+
+@media(max-width: 768px) {
+    .image-form{
+        display: none;
+    }
+    .contato-form{
+        max-width: 100%;
+    }
+    .pt-br-contato{
+        color: var(--color-gray-100);
+    }
+    .nav-menu-contato{
+        color: var(--color-gray-100);
+    }
+}
+
+@media(max-width: 600px) {}
+
+@media(max-width: 480px) {
+    .container-separator{
+        padding: 0px 15px;
+    }
+    .hide-in-mobile{
+        display: none;
+    }
+}
+
