desativando lenis na parte de contato para scroll no mouse

--- a/src/pages/Contato/contato.css
+++ b/src/pages/Contato/contato.css
@@ -22,7 +22,7 @@
 .contato-form{
     width: 100%;
     max-width: 50%;
-    overflow: auto;
+    overflow-y: auto;
 }
 .contatos{
     width: 100%;
