--- a/src/pages/Cases/cases.css
+++ b/src/pages/Cases/cases.css
@@ -1,6 +1,6 @@
 .container-cases{
     width: 100%;
-    height: 200vh;
+    height: 100%;
     display: flex;
     position: relative;
     overflow: hidden;
@@ -92,23 +92,26 @@
 
 .all-cases-container{
     width: 100%;
-    max-width: 1567px;
-    height: 100vh;
-    margin-top: 46px;
+    max-width: 97.9375rem;
+    height: 120%;
+    margin-top: 2.875rem;
+    position: relative;
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 30px;
+    border: 2px red solid;
+}
+.quadrado-image{
     position: relative;
 }
 
-.quadrado-image{
-    width: 200px;
-    height: 200px;
-    position: absolute;
-}
 
 .quadro-text{
     width: 100%;
     display: flex;
     justify-content: space-between;
     margin-top: 8px;
+    border: 2px purple solid;
 }
 .quadro-text p{
     font-size: 14px;
@@ -127,16 +130,27 @@
     width: 100%;
     max-width: 330px;
     height: 257px;
+    top: 20%;
+    border: 2px red solid;
 }
 .quadrado-image:nth-child(3n + 2){
     width: 100%;
-    max-width: 417px;
-    height: 462px;
+    max-width: 26.0625rem;
+    height: 28.875rem;
+    top: 10%;
+    left: 20%;
+    border: 2px blue solid;
+
 }
 .quadrado-image:nth-child(3n + 3){
     width: 100%;
-    max-width: 243px;
-    height: 183px;
+    max-width: 15.1875rem;
+    height: 11.4375rem;
+    top: 30%;
+    left: 50%;
+    margin-bottom: 40px;
+    border: 2px green solid;
 }
+
 
 
