desenvolvendo menu mobile

--- a/src/pages/Cases/cases.css
+++ b/src/pages/Cases/cases.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     display: flex;
-    position: relative;
+    /* position: relative; */
     overflow: hidden;
 }
 .side-menu{
@@ -147,9 +147,56 @@
     margin-bottom: 2.5rem;
 }
 
+/* Mobile */
+
+.menu-mobile{
+    display: none;
+}
+
 .filtro-mobile{
     display: none;
     position: absolute;
+    top: 60px;
+    right: 0;
+    width: 40px;
+    height: 40px;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--color-gray-50);
+    border-radius: 20px;
+}
+
+
+.filtro-mobile img{
+    max-width: 100%;
+    width: 30px;
+    height: 30px;
+}
+.menu-mobile{
+    display: none;
+    width: 40vw;
+    height: 100vh;
+    background-color: var(--color-white);
+    position: absolute;
+    left: 0;
+    z-index: 5;
+    padding: 0px 15px;
+    border: 2px red solid;
+}
+.head-menu{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+}
+.head-menu img{
+    width: 100%;
+    max-width: 1.25rem;
+    height: 1.25rem;
+}
+.head-menu h1{
+    font-size: 20px;
 }
 
 /* responsivo medias */
@@ -232,13 +279,25 @@
 }
 
 @media(max-width: 650px) {
+    .all-cases-container{
+        margin-top: 6rem;
+    }
     .side-menu{
         display: none;
     }
     .filtro-mobile{
         display: flex;
-        top: 50px;
+    
     }
+    .menu-mobile{
+        display: block;
+    }
+    .work-together{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
 }
 
 @media(max-width: 480px) {}
