detalhes menu res < 480px

--- a/src/pages/Cases/cases.css
+++ b/src/pages/Cases/cases.css
@@ -299,7 +299,13 @@
 
 }
 
-@media(max-width: 480px) {}
+@media(max-width: 480px) {
+    .menu-mobile{
+        width: 70vw;
+        
+    
+    }
+}
 
 
 
