--- a/src/pages/Cases/cases.css
+++ b/src/pages/Cases/cases.css
@@ -1,28 +1,32 @@
-.container-cases{
+.container-cases {
     width: 100%;
     height: 100%;
     display: flex;
     /* position: relative; */
     overflow: hidden;
 }
-.side-menu{
+
+.side-menu {
     width: 100%;
     max-width: 293px;
     height: 842px;
     margin-top: 126px;
-   
+
 }
-.side-menu h1{
+
+.side-menu h1 {
     font-size: 20px;
     font-family: "neue-haas-grotesk-display";
     font-weight: 500;
     line-height: 110%;
 
 }
-.filtros{
+
+.filtros {
     margin-top: 28px;
 }
-.filtros li{
+
+.filtros li {
     margin-bottom: 18px;
     color: var(--color-gray-500);
     font-size: 16px;
@@ -34,24 +38,24 @@
     border-bottom: 1px white solid;
 }
 
-.filtros li:hover{
+.filtros li:hover {
     color: var(--color-black);
     border-color: var(--color-black);
     cursor: pointer;
-    
+
 }
 
-.work-together{
+.work-together {
     margin-top: 100px;
 }
 
-.work-together img{
+.work-together img {
     width: 100%;
     max-width: 224px;
     height: 260px;
 }
 
-.work-together button{
+.work-together button {
     margin-top: 18px;
     background-color: var(--color-black);
     color: var(--color-white);
@@ -60,7 +64,7 @@
     border-radius: 4px;
 }
 
-.bottom-side-menu{
+.bottom-side-menu {
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -68,21 +72,22 @@
     margin-top: 100px;
 }
 
-.bottom-side-menu h2{
+.bottom-side-menu h2 {
     color: var(--color-gray-700);
     font-size: 14px;
     font-weight: 500;
     line-height: 140%;
     font-family: "neue-haas-grotesk-display"
 }
-.bottom-side-menu p{
+
+.bottom-side-menu p {
     color: var(--color-black);
     font-size: 14px;
     font-weight: 500;
     line-height: 140%;
 }
 
-.image-side-menu img{
+.image-side-menu img {
     width: 100%;
     max-width: 43px;
     height: 47px;
@@ -90,7 +95,7 @@
 
 /* Parte de cases  */
 
-.all-cases-container{
+.all-cases-container {
     width: 100%;
     max-width: 97.9375rem;
     height: 120%;
@@ -100,23 +105,26 @@
     grid-template-columns: auto auto;
     gap: 1.875rem;
 }
-.quadrado-image{
+
+.quadrado-image {
     position: relative;
 }
 
 
-.quadro-text{
+.quadro-text {
     width: 100%;
     display: flex;
     justify-content: space-between;
     margin-top: 8px;
 }
-.quadro-text p{
+
+.quadro-text p {
     font-size: 14px;
     font-weight: 500;
     line-height: 110%;
     color: var(--color-gray-500)
 }
+
 .quadro-text .projeto {
     font-size: 14px;
     font-weight: 500;
@@ -124,13 +132,14 @@
     color: var(--color-gray-100)
 }
 
-.quadrado-image:nth-child(3n + 1){
+.quadrado-image:nth-child(3n + 1) {
     width: 100%;
     max-width: 20.625rem;
     height: 16.0625rem;
     top: 20%;
 }
-.quadrado-image:nth-child(3n + 2){
+
+.quadrado-image:nth-child(3n + 2) {
     width: 100%;
     max-width: 26.0625rem;
     height: 28.875rem;
@@ -138,7 +147,8 @@
     left: 20%;
 
 }
-.quadrado-image:nth-child(3n + 3){
+
+.quadrado-image:nth-child(3n + 3) {
     width: 100%;
     max-width: 15.1875rem;
     height: 11.4375rem;
@@ -149,11 +159,11 @@
 
 /* Mobile */
 
-.menu-mobile{
+.menu-mobile {
     display: none;
 }
 
-.filtro-mobile{
+.filtro-mobile {
     display: none;
     position: absolute;
     top: 60px;
@@ -167,12 +177,13 @@
 }
 
 
-.filtro-mobile img{
+.filtro-mobile img {
     max-width: 100%;
     width: 30px;
     height: 30px;
 }
-.menu-mobile{
+
+.menu-mobile {
     display: none;
     width: 40vw;
     height: 100vh;
@@ -182,116 +193,133 @@
     z-index: 5;
     padding: 0px 15px;
 }
-.head-menu{
+
+.head-menu {
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 10px;
 }
-.head-menu img{
+
+.head-menu img {
     width: 100%;
     max-width: 1.25rem;
     height: 1.25rem;
 }
-.head-menu h1{
+
+.head-menu h1 {
     font-size: 20px;
+}
+
+.menu-open-mobile-black {
+    display: none;
 }
 
 /* responsivo medias */
 
 @media(max-width: 1400px) {
-    .quadrado-image:nth-child(3n + 2){
+    .quadrado-image:nth-child(3n + 2) {
         top: 10%;
         left: 13%;
-    
+
     }
 }
 
 @media(max-width: 1280px) {
-    .quadrado-image:nth-child(3n + 2){
+    .quadrado-image:nth-child(3n + 2) {
         top: 10%;
         left: 5%;
-    
+
     }
-    .quadrado-image:nth-child(3n + 3){
+
+    .quadrado-image:nth-child(3n + 3) {
         top: 30%;
         left: 40%;
-       
+
     }
 }
 
 @media(max-width: 1200px) {
-    .quadrado-image:nth-child(3n + 1){
+    .quadrado-image:nth-child(3n + 1) {
         width: 100%;
         max-width: 18.75rem;
         height: 14.1875rem;
     }
 
-    .quadrado-image:nth-child(3n + 2){
+    .quadrado-image:nth-child(3n + 2) {
         width: 100%;
         max-width: 21.875rem;
         height: 26.375rem;
-    
+
     }
 
-    .quadrado-image:nth-child(3n + 3){
+    .quadrado-image:nth-child(3n + 3) {
         top: 30%;
         left: 30%;
-       
+
     }
 }
 
 @media(max-width: 991px) {
-    .quadrado-image:nth-child(3n + 2){
+    .quadrado-image:nth-child(3n + 2) {
         width: 100%;
         max-width: 18.75rem;
         height: 21.875rem;
         top: 10%;
         left: 0%;
-       
+
     }
-    .quadrado-image:nth-child(3n + 3){
+
+    .quadrado-image:nth-child(3n + 3) {
         top: 30%;
         left: 0%;
-       
+
     }
 }
 
 @media(max-width: 750px) {
-    .quadrado-image:nth-child(3n + 1){
+    .quadrado-image:nth-child(3n + 1) {
         width: 100%;
         max-width: 18.75rem;
         height: 12.5rem;
     }
-    .quadrado-image:nth-child(3n + 2){
+
+    .quadrado-image:nth-child(3n + 2) {
         width: 100%;
         max-width: 18.75rem;
         height: 17.5rem;
     }
-    .quadro-text p, .quadro-text .projeto {
+
+    .quadro-text p,
+    .quadro-text .projeto {
         font-size: 12px;
     }
-    .side-menu{
+
+    .side-menu {
         max-width: 15.625rem;
     }
 }
 
 @media(max-width: 650px) {
-    .all-cases-container{
+    .all-cases-container {
         margin-top: 6rem;
     }
-    .side-menu{
+
+    .side-menu {
         display: none;
     }
-    .filtro-mobile{
+
+    .filtro-mobile {
         display: flex;
-    
+
     }
-    .menu-mobile{
+
+    .menu-mobile {
         display: block;
     }
-    .work-together{
+
+    .work-together {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -300,13 +328,19 @@
 }
 
 @media(max-width: 480px) {
-    .menu-mobile{
+    .menu-mobile {
         width: 70vw;
-        
-    
+
     }
+
+    .menu-open-mobile-black {
+        background: rgb(17, 17, 17);
+        opacity: 0.7;
+        position: fixed;
+        inset: 0px;
+        z-index: 3;
+        display: block;
+        /* transition: ease 0.3s; */
+    }
+    
 }
-
-
-
-
