--- a/src/pages/Cases/cases.css
+++ b/src/pages/Cases/cases.css
@@ -334,6 +334,8 @@
     }
 
     .menu-open-mobile-black {
+        width: 100%;
+        height: 100%;
         background: rgb(17, 17, 17);
         opacity: 0.7;
         position: fixed;
