--- a/src/pages/Cases/cases.css
+++ b/src/pages/Cases/cases.css
@@ -1,6 +1,6 @@
 .container-cases {
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     display: flex;
     /* position: relative; */
     overflow: hidden;
@@ -8,9 +8,9 @@
 
 .side-menu {
     width: 100%;
-    max-width: 293px;
-    height: 842px;
-    margin-top: 126px;
+    max-width: 18.3125rem;
+    height: 52.625rem;
+    margin-top: 7.875rem;
 
 }
 
@@ -23,13 +23,13 @@
 }
 
 .filtros {
-    margin-top: 28px;
+    margin-top: 1.75rem;
 }
 
 .filtros li {
-    margin-bottom: 18px;
+    margin-bottom: 1.125rem;
     color: var(--color-gray-500);
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 500;
     line-height: 110%;
     font-family: "neue-haas-grotesk-display";
@@ -46,30 +46,30 @@
 }
 
 .work-together {
-    margin-top: 100px;
+    margin-top: 6.25rem;
 }
 
 .work-together img {
     width: 100%;
-    max-width: 224px;
-    height: 260px;
+    max-width: 14rem;
+    height: 16.25rem;
 }
 
 .work-together button {
-    margin-top: 18px;
+    margin-top: 1.125rem;
     background-color: var(--color-black);
     color: var(--color-white);
-    width: 224px;
+    width: 14rem;
     padding: 12px 0px;
-    border-radius: 4px;
+    border-radius: 0.25rem;
 }
 
 .bottom-side-menu {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    max-width: 224px;
-    margin-top: 100px;
+    max-width: 14rem;
+    margin-top: 6.25rem;
 }
 
 .bottom-side-menu h2 {
@@ -89,8 +89,8 @@
 
 .image-side-menu img {
     width: 100%;
-    max-width: 43px;
-    height: 47px;
+    max-width: 2.6875rem;
+    height: 2.9375rem;
 }
 
 /* Parte de cases  */
@@ -115,7 +115,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    margin-top: 8px;
+    margin-top: 0.5rem;
 }
 
 .quadro-text p {
@@ -166,21 +166,21 @@
 .filtro-mobile {
     display: none;
     position: absolute;
-    top: 60px;
-    right: 0;
-    width: 40px;
-    height: 40px;
+    top: 3.75rem;
+    right: 0.9375rem;
+    width: 2.5rem;
+    height: 2.5rem;
     align-items: center;
     justify-content: center;
     background-color: var(--color-gray-50);
-    border-radius: 20px;
+    border-radius: 1.25rem;
 }
 
 
 .filtro-mobile img {
     max-width: 100%;
-    width: 30px;
-    height: 30px;
+    width: 1.875rem;
+    height: 1.875rem;
 }
 
 .menu-mobile {
