--- a/src/pages/Cases/cases.css
+++ b/src/pages/Cases/cases.css
@@ -1,6 +1,6 @@
 .container-cases {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     display: flex;
     /* position: relative; */
     overflow: hidden;
@@ -101,7 +101,7 @@
 .all-cases-container {
     width: 100%;
     max-width: 97.9375rem;
-    height: auto;
+    min-height: 100vh;
     margin-top: 2.875rem;
     position: relative;
     display: grid;
