--- a/src/pages/Cases/cases.css
+++ b/src/pages/Cases/cases.css
@@ -125,6 +125,7 @@
     display: flex;
     justify-content: space-between;
     margin-top: 0.5rem;
+    will-change: transform;
 }
 
 .quadro-text p {
