--- a/src/pages/CaseUnico/caseunico.css
+++ b/src/pages/CaseUnico/caseunico.css
@@ -1,7 +1,100 @@
 .container-caseunico{
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+}
+.title{
+    width: 100%;
+    margin-top: 138px;
+}
+.title h1{
+    font-size: 64px;
+    font-weight: 500;
+    line-height: 120%;
+    font-family: "neue-haas-grotesk-display"
+}
+.services{
+    display: flex;
+    margin-top: 2.4375rem;    
+}
+.services p{
+    color: var(--color-gray-500);
+    font-size: 14px;
+    font-weight: 450;
+    line-height: 110%;
+}
+.resume{
+    display: flex;
+    width: 100%;
+    justify-content: end;
+}
+.text-resume{
+    width: 50%;
+}
+.text-resume p{
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 140%;
+    font-family: "neue-haas-grotesk-text";
+    color: var(--color-gray-400);
+}
+.image-hero{
+    width: 100%;
+    height: 45rem;
+    margin-top: 38px;
+}
+.image-hero img{
+    object-position: 50% 0%;
+    border-radius: 8px;
+}
+.background{
+    width: 100%;
+    margin-top: 11.25rem;
+}
+.background h2{
+    font-size: 16px;
+    font-weight: 500;
+    color: var(--color-gray-200);
+    font-family: "neue-haas-grotesk-display"
+}
+.back-text{
+    width: 50%;
+    margin-top: 32px;
+}
+.back-text p{
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 140%;
+    font-family: "neue-haas-grotesk-text";
+    color: var(--color-gray-400);
+}
+.group-grid{
+    width: 100%;
+    display: grid;
+    grid-template-areas:
+    "item1 item2"
+    "item3 item3";
+  grid-template-columns: 1fr 1fr; 
+  grid-template-rows: auto auto; 
+  gap: 20px;
+  margin-top: 3rem;
+ 
+}
+.item1,.item2,.item3{
+    height: 720px;
+}
+.item1 {
+    grid-area: item1;
+  }
+  
+  .item2 {
+    grid-area: item2;
+  }
+  
+  .item3 {
+    grid-area: item3;
+  }
+.group-grid img{
+    border-radius: 0.5rem;
 }
